# 18-Hacks-Qwen3.6-plus-Super-Promptor

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_v3.1.md  COUNCIL_INTEGRATION.md  COUNCIL_RELEASE_SUMMARY.md  OPTION_1_2_COMPLETE.md  README.md  ROADMAP_v3.2.md  SESSION_HANDOFF_20260512.md  SHARE_MESSAGE.md  SHARING_LINKS.md  council-report-20260512-175851.html  council-transcript-20260512-175851.md
py-mdlint/: .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  test.md  test_fence.py  test_parser.py
py-mdlint/.github/workflows/: mdlint-check.yml  release.yml  test.yml
py-mdlint/scripts/: bootstrap_rule.py  compare-with-js.js  lint_hybrid.py
py-mdlint/src/py_mdlint/: __init__.py  __main__.py  cli.py  config.py  fixer.py  interactive.py  parser.py  registry.py  reporter.py  watcher.py
py-mdlint/src/py_mdlint/rules/: __init__.py  base.py  md001.py  md003.py  md004.py  md005.py  md007.py  md009.py  md010.py  md011.py  md012.py  md013.py  md014.py  md018.py  md019.py  md020.py  md021.py  md022.py  md023.py  md024.py  md025.py  md026.py  md027.py  md028.py  md029.py  md030.py  md031.py  md032.py  md033.py  md034.py  md035.py  md036.py  md037.py  md038.py  md039.py  md040.py  md041.py  md042.py  md043.py  md044.py  (+15 more)
py-mdlint/src/py_mdlint/utils/: __init__.py  colors.py  (+2 more)
py-mdlint/tests/: conftest.py  test_cli.py  test_interactive.py  test_registry.py
py-mdlint/tests/test_rules/: test_md001.py  test_md003.py  test_md004.py  test_md005.py  test_md007.py  test_md009.py  test_md010.py  test_md011.py  test_md012.py  test_md013.py  test_md014.py  test_md018.py  test_md019.py  test_md020.py  test_md021.py  test_md022.py  test_md023.py  test_md024.py  test_md025.py  test_md026.py  test_md027.py  test_md028.py  test_md029.py  test_md030.py  test_md031.py  test_md032.py  test_md033.py  test_md034.py  test_md035.py  test_md036.py  test_md037.py  test_md038.py  test_md039.py  test_md040.py  test_md041.py  test_md042.py  test_md043.py  test_md044.py  test_md045.py  test_md046.py  (+13 more)
(+28 files in other folders)
