# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-mdlint"
version = "1.0.0"
description = "A Python Markdown linter compatible with DavidAnson/markdownlint"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "valorisa", email = "user@example.com"}]
keywords = ["markdown", "linter", "markdownlint", "ci", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "markdown-it-py>=3.0.0",
  "pydantic>=2.0.0",
  "watchdog>=3.0.0; extra == 'watch'",
  "pyyaml>=6.0; extra == 'yaml'",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0.0"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
py-mdlint = "py_mdlint.cli:main"

[project.urls]
Homepage = "https://github.com/valorisa/py-mdlint"
Repository = "https://github.com/valorisa/py-mdlint"
Issues = "https://github.com/valorisa/py-mdlint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_mdlint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B"]
ignore = ["ANN101", "ANN102"]
